update demo title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="shortcut icon" href="favicon.ico">
 <link href='dist/dragula.css' rel='stylesheet' type='text/css' />
 <link href='example/example.css' rel='stylesheet' type='text/css' />
-<title>dragula</title>
+<title>react-dragula</title>
 <h1><a href='https://github.com/bevacqua/react-dragula'><img src='resources/logo.svg' onerror='this.src="resources/logo.png"' alt='react-dragula'/></a></h1>
 <h3 class='tagline'>Drag and drop so simple it hurts</h3>
 <a href='https://github.com/bevacqua/react-dragula'>
